Modifiche dopo presa visione file sql

--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -1,14 +1,14 @@
-Si vuole realizzare una base di dati per rappresentare al meglio il lavoro della cantina \emph{Nome cantina}. Come prodotto principale c'è la bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante).
-Altro prodotto importante è il vino, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione, la tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite il nome e la vendemmia. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\
-L'uva proviene da un tipo di vigna, identificata da un ID, la quale è coltivata in un determinato vigneto. Importante identificare la data della piantagione della vigna. Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione e il tipo di terreno di piantagione.\\
-Essendo una cantina molto grossa l'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
-I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale, la partita IVA e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori.
-I tappi vengono rappresentati tramite la forma ed il materiale, le bottigle da capacità e colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.\\
-Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità. Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate più il prezzo di spedizione).\\
-Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un ID ed un nome commerciale. Importante identificare la data  di spedizione e di ricezione dell'ordine.\\
-Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un ID. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
-Queste aziende sono dei nostri negozi e possono ospitare degli eventi con una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento partecipano delle persone che si devono registrare e inserire i propri dati (nome, cognome, età). Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
-Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo.\\
-In ognugno di questi reparti lavora un dipendete in un determinato turno di lavoro. Per ogni dipendete viene registrato il nome, il cognome, lo stipendio e vengono identificati tramite il codice fiscale. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
-Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane. I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data dell'ultima manutenzione e della prossima manutenzione. I macchinari avranno anche un nome commerciale.\\
-Le manutenzioni avranno un costo e vengono eseguite da aziende esterne, che sono rappresentato solo dal nome commerciale e da un identificativo.
+Si vuole realizzare una base di dati per rappresentare al meglio il lavoro della cantina \emph{Nome cantina}. Come prodotto principale c'è la \textbf{bottiglia di vino} che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante).
+Altro prodotto importante è il \textbf{vino}, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione e la tipologia dell'uva con la relativa vendemmia (anno di raccolta) con cui è stato prodotto. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\ Ovviamente la cantina acquista esternamente da altre \textbf{aziende} le proprie \textbf{materie prime} che vanno a formare il prodotto finale, queste materie prime sono identificate tramite un ID univoco. Quest'ultime si dividono in uva, bottiglia e tappo. Dell'uva è importante tenere traccia dell'anno di raccolta, del nome e del colore. Dei tappi viene registrata la forma ed il materiale; delle bottigle, invece, viene registrata la capacità ed il colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle.\\
+Un tipo d'uva proviene da un tipo di \textbf{vigna}, identificata da un ID, la quale è coltivata in un determinato \textbf{vigneto}. Importante identificare la data della piantagione della vigna. Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione.\\
+Le aziende con cui la cantina ha relazione sono molteplici. Queste aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate da: nome commerciale, partita IVA, nome e cognome di un referente, telefono ed email aziendale e dall'indirizzo di locazione (che nel caso di un ordine di vendita coincide con quello di spedizione).\\
+I fornitori, inoltre, sono divisi in fornitori d'uva, di tappi e di bottiglie. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.\\
+Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un \textbf{ordine} di vendita. Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate moltiplicate per la loro quantità più il prezzo di spedizione).\\
+Ogni ordine è affidato ad un \textbf{corriere} il quale viene rappresentato tramite un ID ed un nome commerciale. Importante identificare la data di spedizione e di ricezione dell'ordine.\\
+Ogni ordine viene venduto ad un \textbf{acquirente}, che può essere un'azienda o un privato. I privati vengono identificati tramite un'ID ed è utile tenere traccia di queste informazioni del privato: nome, cognome, telefono, email e l'indirizzo di spedizione.\\
+Esistono alcune aziende, che anche se gestite esternamente, sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
+Queste aziende sono dei nostri negozi interni e possono ospitare degli \textbf{eventi} con una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento \textbf{partecipano delle persone} che si devono registrare e inserire i propri dati (nome, cognome, età). Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
+Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste \textbf{linee produttive} sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo.\\
+In ognugno di questi reparti lavorano dei \textbf{dipendeti} in determinati turni di lavoro. Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
+Per ogni linea produttiva sono presenti dei \textbf{macchinari} che aiutano i dipendenti nelle mansioni quotidiane. I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome commerciale e la data di acquisto.\\
+Le manutenzioni avranno un costo e verrano eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne rappresentate come sopra.
