--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -3,7 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}} \\
 		\midrule
-		La bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità\\
+		La bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendita\\
 		\bottomrule
 	\end{tabular}
 
@@ -13,7 +13,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VINO}} \\
 		\midrule
-		Altro prodotto importante è il vino, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione, la tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore.  Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\
+		Altro prodotto importante è il vino, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione e la tipologia dell'uva con la relativa vendemmia (anno di raccolta) con cui è stato prodotto. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\
 		\bottomrule
 	\end{tabular}
 
@@ -21,9 +21,9 @@
 	
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD UVA}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}} \\
 		\midrule
-		La tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite il nome e la vendemmia. L'uva proviene da un tipo di vigna. L'uva è fornita da aziende esterne.\\
+		Ovviamente la cantina acquista esternamente da altre aziende le proprie materie prime che vanno a formare il prodotto finale, queste materie prime sono identificate tramite un ID univoco. Quest'ultime si dividono in uva, bottiglia e tappo. Dell'uva è importante tenere traccia dell'anno di raccolta, del nome e del colore. Dei tappi viene registrata la forma ed il materiale; delle bottigle, invece, viene registrata la capacità ed il colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle. Un tipo d'uva proviene da un tipo di vigna\\
 		\bottomrule
 	\end{tabular}
 
@@ -33,7 +33,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNA}} \\
 		\midrule
-		L'uva proviene da un tipo di vigna, identificata da un ID, la quale è coltivata in un determinato vigneto. Importante identificare la data della piantagione della vigna.\\
+		Un tipo d'uva proviene da un tipo di vigna, identificata da un ID, la quale è coltivata in un determinato vigneto. Importante identificare la data della piantagione della vigna.\\
 		\bottomrule
 	\end{tabular}
 
@@ -43,7 +43,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNETO}} \\
 		\midrule
-		Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione e il tipo di terreno di piantagione.\\
+		Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -51,30 +51,11 @@
 	
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A FORNITORE}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}} \\
 		\midrule
-		L'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
-I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale, la partita IVA e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito\\
-		\bottomrule
-	\end{tabular}
-	
-	\vspace{0.5cm}
-	
-	\begin{tabular}{P{16cm}}
-		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TAPPO}} \\
-		\midrule
-		I tappi vengono rappresentati tramite la forma ed il materiale. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi\\
-		\bottomrule
-	\end{tabular}
-	
-	\vspace{0.5cm}
-	
-	\begin{tabular}{P{16cm}}
-		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA}} \\
-		\midrule
-		Le bottigle vengono identificate da capacità e colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per le bottiglie\\
+		Le aziende con cui la cantina ha relazione sono molteplici. Queste aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate da: nome commerciale, partita IVA, nome e cognome di un referente, telefono ed email aziendale e dall'indirizzo di locazione (che nel caso di un ordine di vendita coincide con quello di spedizione). I fornitori, inoltre, sono divisi in fornitori d'uva, di tappi e di bottiglie. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.
+		Esistono alcune aziende, che anche se gestite esternamente, sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.
+		Queste aziende sono dei nostri negozi interni e possono ospitare degli eventi. Le manutenzioni vengono eseguite da aziende esterne\\
 		\bottomrule
 	\end{tabular}
 	
@@ -84,7 +65,7 @@ I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno u
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}} \\
 		\midrule
-		Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate e dal prezzo di spedizione). Ogni ordine è affidato ad un corriere. Importante identificare la data  di spedizione e di ricezione dell'ordine. Ogni ordine è venduto ad un'azienda o ad un privato\\
+		Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate moltiplicate per la loro quantità più il prezzo di spedizione). Ogni ordine è affidato ad un corriere. Importante identificare la data  di spedizione e di ricezione dell'ordine. Ogni ordine viene venduto ad un'azienda o ad un privato.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -102,8 +83,7 @@ I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno u
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ACQUIRENTE}} \\
-		Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un ID. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
-Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
+		Ogni ordine viene venduto ad un acquirente, che può essere un'azienda o un privato. I privati vengono identificati tramite un'ID ed è utile tenere traccia di queste informazioni del privato: nome, cognome, telefono, email e l'indirizzo di spedizione.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -130,7 +110,7 @@ Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A LINEA PRODUTTIVA}} \\
-		Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo. Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante). In ognugno di questi reparti lavora un dipendete in un determinato turno di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
+		Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo. Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante). In ognugno di questi reparti lavorano dei dipendeti in un determinati turni di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -139,7 +119,7 @@ Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A DIPENDENTE}} \\
-		Per ogni dipendete viene registrato il nome, il cognome, lo stipendio e vengono identificati tramite il codice fiscale. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
+		Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -148,16 +128,8 @@ Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MACCHINARIO}} \\
-		I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data dell'ultima manutenzione e della prossima manutenzione. I macchinari avranno anche un nome commerciale. Le manutenzioni avranno un costo e vengono eseguite da aziende esterne,\\
+		I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome commerciale e la data di acquisto. Le manutenzioni avranno un costo e verrano eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne.\\
 		\bottomrule
 	\end{tabular}
 	
-	\vspace{0.5cm}
-	
-	\begin{tabular}{P{16cm}}
-		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA MANUTENZIONE}} \\
-		Le aziende di manutenzione sono rappresentate solo dal nome commerciale e da un identificativo\\
-		\bottomrule
-	\end{tabular}
 \end{center}
