--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,2 +1,1 @@
-La cantina \emph{Nome cantina} venne fondata nel 1867 da due agricoltori Padovani che avevano una passione in comune, quella per il vino del proprio territorio. Appena iniziata l'attivià hanno ricevuto subito un notevole apprezzamento da parte di tutto il suolo locale, decidendo così di ampliare i propri orrizonti e spingersi oltre i confini locali. Nel corsi degli anni le richieste del proprio vino sono cresciute esponenzialmente e hanno portato una forte rimodernizzaziobne nella \emph{Nome cantina}, su tutti i fronti. Ora la cantina non produce più vino solo del proprio territorio, ma anche vini provenienti da tutta Italia. Inoltre, il consenso ottenuto dopo anni ha spinto la cantina a produrre non solo per le varie aziende esterne, ma anche in proprio, decidendo di aprire molti negozi sparsi in tutta la nazione sotto il nome di \emph{Nome Negozi}.\\
-Dopo il ridimensionamento sul comparto produttivo, si è deciso di fare un passo avanti anche riguardo il comparto tecnologico, portando alla creazione di un database apposito. Il suddetto serve per supportare l'azienda nel lavoro di tutti i giorni, cioè la \emph{l'acquisto delle materie prime, la produzione, la vendita delle proprie bottigle, l'oganizzazione dei vari reparti lavorativi e la promozione del proprio marchio tramite eventi nazionali}.
+La cantina \emph{Nome cantina} venne fondata nel 1867 da due agricoltori Padovani accomunati dalla comune passione per il vino del proprio territorio. Sin dal primo momento ricevettero un notevole apprezzamento, tanto da diventare in pochi anni icona del vino in Italia. A partire dalla seconda meta' degli anni '90 la cantina inizio' un lungo percorso di modernizzazione circolare, con lo scopo principale di consolidare il proprio status di leader nel settore, oltre che di migliorare le condizioni lavorative dei propri dipendenti. Tale processo innovativo prevede oggi la digitalizzazione di tutte le attivita' non manuali in modo da poter rendere la tracciabilita' dei propri prodotti piu' trasparente e affidabile. Nell'ultimo anno inoltre si e' manifestata la volonta' di cavalcare il trend dell'e-commerce permettendo quindi ai privati di acquistare direttamente dalla cantina attraverso un negozio online oltre che nei soliti punti vendita sparsi in tutta Italia. La base di dati che si vuole modellare ha lo scopo di supportare l'operativita' della cantina, tenendo traccia delle materie prime acquistate, degli ordini ricevuti e dell'organizzazione dei vari reparti produttivi.
