--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -1,37 +1,42 @@
 \begin{center}
-	\begin{tabular}{P{2cm}P{8cm}P{4cm}}
+	\begin{tabular}{P{2cm}P{2cm}P{6cm}P{4cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} Termine & Descrizione & Collegamento \\
+		\rowcolor[rgb]{.929, .929, .929} Termine & Sinonimi & Descrizione & Collegamento \\
+		
 		\midrule
-		Bottiglia di vino & Una bottiglia di vino della cantina in vendita & Vino, Materia prima (tappo, bottiglia), Linea produttiva (magazzino), Ordine\\
+		Bottiglia di vino & & Una bottiglia di vino della cantina in vendita online e nei negozi fisici. & Vino, Bottiglia, Tappo, Ordine\\
 		\midrule
-		Vino & Il vino prodotto all'interno della cantina & MateriaPrima (uva), Linea produttiva (produzione del vino), Evento (tema principale), Bottiglia di vino \\
+		Tipo Vino & Vino & Le tipologie di vino prodotte all'interno della cantina. & Uva, Evento, Bottiglia di vino \\
+		
 		\midrule
-		Materia prima & Rappresenta le materie prima da cui si forma la bottiglia di vino. Si suddivide in uva, bottiglia, tappo  &  Vino (uva), Vigna (uva), Tipo uva (uva), Bottiglia di vino (bottiglia, tappo), Fornitore\\
+		Materia prima & & Rappresenta le materie prime che vengono acquistate e manipolate per comporre le bottiglie di vino. &  Tipo Vino, Tipo uva, Fornitore\\
+		
 		\midrule
-		Tipo uva & Rappresenta la tipologia dell'uva &  Materia prima (uva), Vigna\\
+		Tipo uva &  & La tipologia dell'uva che viene acquistata per produrre il vino. &  Uva, Vigneto\\
+		
 		\midrule
-		Vigna & Vigna dalla quale proviene un tipo di uva della cantina &  Tipo uva, Vigneto\\
+		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
+
 		\midrule
-		Vigneto & Raggruppa un tipo di vigna &  Vigna\\
+		Acquirente & & Colui che ha effettuato l'ordine. Puo' essere un privato o un'azienda &  Ordine, Privato, Azienda\\
+
 		\midrule
-		Ordine & Rappresenta un ordine di vendita acquistato da un acquirente &  Bottiglia di vino, Corriere, Acquirente\\
+		Azienda & Fornitore, Negozio interno, Corriere & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Azienda manutenzione, Negozio interno, Fornitore\\
+
 		\midrule
-		Corriere & Colui che si occupa della spedizione dell'ordine &  Ordine\\
+		Ordine & & Un ordine effettuato da un acquirente, contiene le informazioni della merce acquistata e della spedizione. &  Bottiglia di vino, Corriere, Acquirente\\
+
 		\midrule
-		Acquirente & Colui che ha acquistato l'ordine. Si divide in azienda o privato &  Ordine\\
+		Evento & & Un evento organizzato all'interno di un negozio interno in onore di un vino prodotto dalla cantina. &  Tipo Vino, Negozio Interno\\
+
 		\midrule
-		Azienda & L'azienda con la quale la cantina ha rapporti. Si suddivide in fornitori, azienda di manutenzione macchinari e negozio interno. A sua volta fornitore si divide in fornitore d'uva, fornitore bottiglie, fornitori tappi &  Macchinario (azienda manutenzione), Evento (negozio interno), Partecipante (negozio interno), Materia prima (fornitore)\\
+		Linea produttiva & & Un reparto produttivo interno alla cantina. &  Dipendente, Macchinario\\
+
 		\midrule
-		Evento & Rappresenta un evento enoico organizzato all'interno di un nostro negozio. Il tema è un vino della nostra cantina  &  Vino (tema dell'evento), Azienda (negozio interno), Partecipante\\
+		Dipendente & & Colui che lavora per la cantina ed e' assegnato ad una linea produttiva &  Linea produttiva\\
+
 		\midrule
-		Partecipante & Una persona che partecipa ad un evento di un nostro negozio &  Evento, Azienda (negozio interno)\\
-		\midrule
-		Linea produttiva & Rappresenta un reparto di produzione della nostra cantina. Si divide in imbottigliamento, magazzino e produzione del vino. A sua volta produzione del vino si divide in ingresso materie prime, pigiatura, fermentazione, vinificazione e svinatura &  Dipendente(chi dirige la linea produttiva e chi lavora all'interno della linea produttiva), Macchinario, Vino (Produzione del vino), Bottiglia di vino (Magazzino)\\
-		\midrule
-		Dipendente & Colui che lavora all'interno della cantina &  Linea produttiva (Colui che dirige o che lavora all'interno della linea produttiva), Dipendente (Colui che referisce o che viene riferito da un altro dipendente)\\
-		\midrule
-		Macchinario & Una strumentazione che serve all'interno delle linee produttive &  Linea produttiva, Azienda (azienda manutenzione)\\
+		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva\\
 		
 		\bottomrule
 	\end{tabular}
