--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,5 +1,5 @@
-\section{Analisi entita'}\label{analisi_entita}
+\subsection{Analisi entita'}\label{analisi_entita}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
-\section{Analisi delle relazioni e delle cardinalità}
+\subsection{Analisi delle relazioni e delle cardinalità}
 	\input{src/progettazioneConcettuale/analisi_relazioni.tex}
