--- a/src/analisiRequisiti/_main.tex
+++ b/src/analisiRequisiti/_main.tex
@@ -4,16 +4,16 @@
 %\section{considerazioni}
  %   \input{src/analisiRequisiti/considerazioni}
  
- \input{src/analisiRequisiti/analisi_requisiti.tex}
+%  \input{src/analisiRequisiti/analisi_requisiti.tex}
     
-   \section{Glossario dei termini}
-   \input{src/analisiRequisiti/glossario_termini.tex}
+  \subsection{Glossario dei termini}
+    \input{src/analisiRequisiti/glossario_termini.tex}
    
-   \section{Operazioni Tipiche}
-   \input{src/analisiRequisiti/operazioni_tipiche.tex}
+  \subsection{Operazioni Tipiche}
+    \input{src/analisiRequisiti/operazioni_tipiche.tex}
    
-  \section{Strutturazione dei requisiti}
-   \input{src/analisiRequisiti/strutturazione_requisiti.tex}
+  \subsection{Strutturazione dei requisiti}
+    \input{src/analisiRequisiti/strutturazione_requisiti.tex}
   
   
   
