--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -1,14 +1,14 @@
-\section{Analisi ridondanze}
+\subsection{Analisi ridondanze}
 	\input{src/progettazioneLogica/analisi_ridondanze.tex}
 	
-\section{Eliminazioni generalizzazioni}
+\subsection{Eliminazioni generalizzazioni}
 \input{src/progettazioneLogica/eliminazioni_generalizzazioni.tex}
 
-\section{Partizionamento/accorpamento di entità e relationship}
+\subsection{Partizionamento/accorpamento di entità e relationship}
 \input{src/progettazioneLogica/accorpamento_entita.tex}
 
-\section{Scelta degli identificatori principali}
+\subsection{Scelta degli identificatori principali}
 \input{src/progettazioneLogica/identificatori_principali.tex}
 
-\section{Schema logico-relazionale e vincoli d'integrità referenziale}
+\subsection{Schema logico-relazionale e vincoli d'integrità referenziale}
 \input{src/progettazioneLogica/schema_relazionale.tex}
