Edited most sentences in strutturazione requisiti

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \usepackage{array}
 %\usepackage[compact]{titlesec}
 \usepackage[margin=0.8in, includefoot]{geometry}
+\usepackage{longtable}
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 %\titleformat{\chapter}[display]{\bfseries}{}{-30pt}{\Huge}
