--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -1,5 +1,8 @@
+\subsubsection{Considerazioni su Bottiglia di Vino}
+\input{src/analisiRequisiti/considerazioni.tex}
+
 \begin{center}
-	\begin{tabular}{P{2cm}P{2cm}P{6cm}P{4cm}}
+	\begin{longtable}{P{2cm}P{2cm}P{6cm}P{4cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Termine & Sinonimi & Descrizione & Collegamento \\
 		
@@ -39,5 +42,5 @@
 		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva\\
 		
 		\bottomrule
-	\end{tabular}
+	\end{longtable}
 \end{center}
